WKWebView default UA doesn't freeze the build number https://bugs.webkit.org/show_bug.cgi?id=192809 <rdar://problem/44687185>

Reviewed by Andy Estes.

Always reports the frozen build number.

Source/WebKit:

* UIProcess/API/Cocoa/WKWebViewConfiguration.mm:
(defaultApplicationNameForUserAgent): Do not expose the actual build number through this API.

Source/WebKitLegacy/mac:

* WebView/WebView.mm:
(-[WebView _setBrowserUserAgentProductVersion:buildVersion:bundleVersion:]): Do not report the
actual build number through this method call.
(-[WebView _setUIWebViewUserAgentWithBuildVersion:]): Ditto.


Canonical link: https://commits.webkit.org/207492@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239451 268f45cc-cd09-0410-ab3c-d52691b4dbfc